fix(generator): align component messaging style
- use consistent generator menu item creation
- prefix generator documentation messages
- build generator success messages with Adventure components
- prefix history undo and redo errors
- apply command model cleanup suggestions